--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+	<link href='https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,400italic,600,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/vendor.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="css/main.css" type="text/css" media="screen">
 </head>
@@ -30,7 +31,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Logo here</a>
+          <a class="navbar-brand" href="#"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="list-unstyled list-inline pull-right">
@@ -43,8 +44,8 @@
 
 	<!-- Start content here -->
 	<div class="jumbotron">
-		<div class="container">
-					<h1 class="logo">WEDO Logo</h1>
+		<div class="container text-center">
+					<h1 class="hero__logo">WEDO Logo</h1>
 					<p>Tagline</p>
 					<p><a class="btn btn-inverse btn-lg class=" href="#" role="button">I'm planning a wedding</a>
 						<a class="btn btn-inverse btn-lg" href="#" role="button">I'm feeling creative</a></p>
@@ -61,11 +62,18 @@
 	<section id="testimonial">
 			<div class="container">
 				<div class="row">	
-					<div class="col-lg-10 col-md-offset-1">
-						<h3>Quote Here</h3>
-						
+					<div class="col-lg-12">
+						<h3>Recent Completed Projects</h3>
 					</div>
-				
+					<div class="col-md-4">
+						<img src="http://placehold.it/400x400" class="img-responsive mh-a">
+					</div>
+					<div class="col-md-4">
+						<img src="http://placehold.it/400x400" class="img-responsive mh-a">
+					</div>
+					<div class="col-md-4">
+						<img src="http://placehold.it/400x400" class="img-responsive mh-a">
+					</div>
 					</div>
 				</div>
 		</section>
@@ -99,7 +107,12 @@
                     <a href="https://github.com/shivika" class="github" target="_blank"><i class="fa fa-github fa-lg"></i></a>
                 </li>
             </ul>
-    <p class="small pull-right">@copyright WEDO</p>
+    <ul class="list-inline list-unstyled pull-right c-white">
+    	<li>FAQs</li>
+    	<li>Contact</li>
+    	<li>Locations</li>
+    	<li>About Us</li>
+    </ul>
   </div>
 </footer><!-- footer -->
 <!-- JS -->
