Added styling for headers and text

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="list-unstyled list-inline pull-right">
-          	<li>Sign In</li>
-            <li>How It Works</li>
-          	<li>Register</li>
+          	<li><h6>Sign In</h6></li>
+            <li><h6>How It Works</h6></li>
+          	<li><h6>Register</h6></li>
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
