--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<link rel="stylesheet" href="css/main.css" type="text/css" media="screen">
 </head>
 <body id="home">
-
+<div class="u-bg-cv hero__bg">
 <nav class="navbar">
       <div class="container">
         <div class="navbar-header">
@@ -34,26 +34,27 @@
           <a class="navbar-brand" href="#"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <ul class="list-unstyled list-inline pull-right">
-          	<li><h6>Sign In</h6></li>
-            <li><h6>How It Works</h6></li>
-          	<li><h6>Register</h6></li>
+          <ul class="list-unstyled list-inline pull-right c-white font-w-4">
+          	<li>Sign In</li>
+            <li>How It Works</li>
+          	<li>Register</li>
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
 
 	<!-- Start content here -->
-	<div class="jumbotron">
+	<div class="jumbotron hero">
 		<div class="container text-center">
-					<h1 class="hero__logo">WEDO Logo</h1>
-					<p>Tagline</p>
-					<p><a class="btn btn-primary btn-lg class=" href="planner_form.html" role="button">I'm planning a wedding</a>
-						<a class="btn btn-primary btn-lg" href="open-projects.html" role="button">I'm feeling creative</a></p>
+					<h1 class="hero__logo"><img src="images/logo.png" alt=""></h1>
+					<h2>Helping people find the right makers at the right price 
+for their big day.</h2>
+					<p><a class="btn btn-hero btn-lg class=" href="planner_form.html" role="button">I'm planning a wedding</a>
+						<a class="btn btn-hero btn-lg" href="open-projects.html" role="button">I'm feeling creative</a></p>
 		</div>
 	</div>
-
-	<section id="how-it-works" class="text-center">
+</div>
+	<section id="how-it-works">
 		<div class="container">
 				<h2 class="text-center">How It Works</h2>
 				<img src="http://placehold.it/1200x200" class="img-responsive mh-a">
