--- a/open-projects.html
+++ b/open-projects.html
@@ -31,7 +31,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"></a>
+          <a class="navbar-brand" href="index.html"><img src="images/logo-sm.png" alt="" class="header__logo"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="list-unstyled list-inline pull-right">
