Updated planner project detail and added planner summary.

--- a/planner_project_detail.html
+++ b/planner_project_detail.html
@@ -41,76 +41,75 @@
       </div>
     </nav>
 
-<section id="title" class="text-left">
+<section id="project">
     <div class="container">
-            <h2 class="text-left">Alice's Wedding Favors</h2>
-    </div>
+      <div class="row">
+        <div class="col-sm-12">
+          <h1 class="page-title">My Wedding Favors</h1>
+        <div class="media">
+           <div class="media-left">
+               <img src="http://placehold.it/75x75" class="">
+           </div>
+           <div class="media-body align-m">
+             <p><span class="font-t-u font-w-2 small">Category</span>: Favors <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">No. of Items</span>: 40 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Due By</span>: 4/16/2016 </p>
+             <p><span class="font-t-u font-w-2 small">Description</span>: I would like small mason jars with lavender scented bath salts inside and a purple ribbon tied around it.</p>
+             <p><span class="font-t-u font-w-2 small">Instructions</span>: <a href="/https://www.pinterest.com/pin/482659285042667294/">https://www.pinterest.com/pin/482659285042667294/</a></p>
+           </div>
+       </div>
+   </div>
+   </div>
+  </div>
 </section>
-<div>
-    <ul class="list-inline">
-        <li><span class="data">40</span></li>
-        <li><span class="data">Favors</span></li>
-        <li><span class="data">$100</span></li>
-        <li><span class="data">Due: 4/16/16</span></li>
-        <li><span class="data">Status: Open</span></li>
-    </ul>
-</div>
-<div>
-    <dl class="dl-horizontal">
-    <dt>Description</dt>
-    <dd>I would like small mason jars with lavender scented bath salts inside and a purple ribbon tied around it.</dd>
-    <dt>Link</dt>
-    <dd><a href="/https://www.pinterest.com/pin/482659285042667294//">"https://www.pinterest.com/pin/482659285042667294/"</a></dd>
-    </dl>
-</div>
 <section id="bids" class="text-left">
     <div class="container">
-            <h3 class="text-left">Bids</h2>
+            <h2 class="text-left">Bids</h2>
     </div>
-</section>
-<div class="table-responsive">
-    <table class="table table-hover table-condensed">
-        <thead>
-            <tr>
-                <th>Bidder</th>
-                <th>Rating</th>
-                <th>Number of Reviews</th>
-                <th>Accept/Reject</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td><a href="/https://www.google.com/">martinique27</td>
-                <td>[INSERT RATING IMG]</td>
-                <td><a href="/https://www.google.com/">3</td>
-                <td><ul class="list-unstyled list-inline pull-left">
-                          	<li><button type="submit" class="btn btn-default">Accept</button></li>
-                            <li><button type="submit" class="btn btn-default">Accept</button></li>
-                        </ul>
-                </td>
-            </tr>
-            <tr>
-                <td><a href="/https://www.google.com/">lynx93</td>
-                <td>[INSERT RATING IMG]</td>
-                <td><a href="/https://www.google.com/">10</td>
-                <td><ul class="list-unstyled list-inline pull-left">
-                          	<li><button type="submit" class="btn btn-default">Accept</button></li>
-                            <li><button type="submit" class="btn btn-default">Accept</button></li>
-                        </ul>
-                </td>
-            </tr>
-            <tr>
-                <td><a href="/https://www.google.com/">CorailMenthe</td>
-                <td>[INSERT RATING IMG]</td>
-                <td><a href="/https://www.google.com/">41</td>
-                <td><ul class="list-unstyled list-inline pull-left">
-                          	<li><button type="submit" class="btn btn-default">Accept</button></li>
-                            <li><button type="submit" class="btn btn-default">Accept</button></li>
-                        </ul>
-                </td>
-            </tr>
-        </tbody>
-</table>
+    <div class="container">
+        <div class="table-responsive">
+        <table class="table table-hover table-condensed">
+            <thead>
+                <tr>
+                    <th>Bidder</th>
+                    <th>Rating</th>
+                    <th>Number of Reviews</th>
+                    <th>Accept/Reject</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><a href="/https://www.google.com/">martinique27</td>
+                    <td>[INSERT RATING IMG]</td>
+                    <td><a href="/https://www.google.com/">3</td>
+                    <td><ul class="list-unstyled list-inline pull-left">
+                              	<li><button type="submit" class="btn btn-default">Accept</button></li>
+                                <li><button type="submit" class="btn btn-default">Accept</button></li>
+                            </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td><a href="/https://www.google.com/">lynx93</td>
+                    <td>[INSERT RATING IMG]</td>
+                    <td><a href="/https://www.google.com/">10</td>
+                    <td><ul class="list-unstyled list-inline pull-left">
+                              	<li><button type="submit" class="btn btn-default">Accept</button></li>
+                                <li><button type="submit" class="btn btn-default">Accept</button></li>
+                            </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td><a href="/https://www.google.com/">CorailMenthe</td>
+                    <td>[INSERT RATING IMG]</td>
+                    <td><a href="/https://www.google.com/">41</td>
+                    <td><ul class="list-unstyled list-inline pull-left">
+                              	<li><button type="submit" class="btn btn-default">Accept</button></li>
+                                <li><button type="submit" class="btn btn-default">Accept</button></li>
+                            </ul>
+                    </td>
+                </tr>
+            </tbody>
+    </table>
+    </div>
 </div>
+</section>
 </body>
 </html>
