--- a/planner_project_detail.html
+++ b/planner_project_detail.html
@@ -35,7 +35,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="list-unstyled list-inline pull-right">
-          	<li>Profile</li>
+          	<li><h6>Profile</h6></li>
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
@@ -45,25 +45,44 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
+          <h5 class="page-title pull-left">Crafts I've listed on Wedo:</h5>
+          <h5 class="page-title pull-right"><i class="fa fa-angle-left c-pink-lt"></i>&#09;2 of 15&#09;<i class="fa fa-angle-right c-pink-lt"></i></h5>
+        </div>
+      </div>
+
+
+
+      <div class="row">
+        <div class="col-sm-12">
           <h1 class="page-title">My Wedding Favors</h1>
-        <div class="media">
-           <div class="media-left">
-               <img src="http://placehold.it/75x75" class="">
-           </div>
-           <div class="media-body align-m">
-             <p><span class="font-t-u font-w-2 small">Category</span>: Favors <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">No. of Items</span>: 40 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Due By</span>: 4/16/2016 </p>
-             <p><span class="font-t-u font-w-2 small">Description</span>: I would like small mason jars with lavender scented bath salts inside and a purple ribbon tied around it.</p>
-             <p><span class="font-t-u font-w-2 small">Instructions</span>: <a href="/https://www.pinterest.com/pin/482659285042667294/">https://www.pinterest.com/pin/482659285042667294/</a></p>
-           </div>
-       </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <img src="assets/planner-project-detail/craft.png" class="col-sm-3">
+        <div class="col-sm-9">
+          <p><span class="font-t-u font-w-2 small"><i class="fa fa-archive"></i> Category</span>: Favors <span class="v-divider">|</span> <span class="font-t-u font-w-2 small"><i class="fa fa-usd"></i> Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small"><i class="fa fa-gift"></i> No. of Items</span>: 40 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small"><i class="fa fa-calendar"></i> Due By</span>: 4/16/2016 </p>
+          <p><span class="font-t-u font-w-2 small">Description</span>: I would like small mason jars with lavender scented bath salts inside and a purple ribbon tied around it.</p>
+          <p><span class="font-t-u font-w-2 small">Instructions</span>: <a href="/https://www.pinterest.com/pin/482659285042667294/">https://www.pinterest.com/pin/482659285042667294/</a></p>
+      </div>
+
+     </div>
    </div>
    </div>
   </div>
 </section>
 <section id="bids" class="text-left">
+    &nbsp;&nbsp;&nbsp;
     <div class="container">
-            <h2 class="text-left">Bids</h2>
+      <div class="row">
+        <div class="col-sm-12">
+          <h5 class="page-title pull-left">Bids for your Wedding Favors:</h5>
+        </div>
+      </div>
     </div>
+
+    &nbsp;
+
     <div class="container">
         <div class="table-responsive">
         <table class="table table-hover table-condensed">
@@ -78,7 +97,7 @@
             <tbody>
                 <tr>
                     <td><a href="/https://www.google.com/">martinique27</td>
-                    <td>[INSERT RATING IMG]</td>
+                    <td><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i></td>
                     <td><a href="/https://www.google.com/">3</td>
                     <td><ul class="list-unstyled list-inline pull-left">
                               	<li><button type="submit" class="btn btn-default">Accept</button></li>
@@ -88,7 +107,7 @@
                 </tr>
                 <tr>
                     <td><a href="/https://www.google.com/">lynx93</td>
-                    <td>[INSERT RATING IMG]</td>
+                    <td><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i></td>
                     <td><a href="/https://www.google.com/">10</td>
                     <td><ul class="list-unstyled list-inline pull-left">
                               	<li><button type="submit" class="btn btn-default">Accept</button></li>
@@ -98,7 +117,7 @@
                 </tr>
                 <tr>
                     <td><a href="/https://www.google.com/">CorailMenthe</td>
-                    <td>[INSERT RATING IMG]</td>
+                    <td><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-half-o"></i> <i class="fa fa-star-o"></i></td>
                     <td><a href="/https://www.google.com/">41</td>
                     <td><ul class="list-unstyled list-inline pull-left">
                               	<li><button type="submit" class="btn btn-default">Accept</button></li>
