--- a/index.html
+++ b/index.html
@@ -47,25 +47,50 @@
 	<div class="jumbotron hero">
 		<div class="container text-center">
 					<h1 class="hero__logo"><img src="images/logo.png" alt=""></h1>
-					<h2>Helping people find the right makers at the right price 
-for their big day.</h2>
-					<p><a class="btn btn-hero btn-lg class=" href="planner_form.html" role="button">I'm planning a wedding</a>
-						<a class="btn btn-hero btn-lg" href="open-projects.html" role="button">I'm feeling creative</a></p>
+					<h3 class="c-white mb-30">Helping people find the right makers at the right price 
+for their big day.</h3>
+					<p><a class="btn btn-hero btn-lg class=" href="#" role="button">I'm planning a wedding</a>
+						<a class="btn btn-hero btn-lg" href="planner_form.html" role="button">I'm feeling creative</a></p>
 		</div>
 	</div>
 </div>
-	<section id="how-it-works">
+	<section id="how-it-works" class="mb-50">
 		<div class="container">
+      <span><img src="images/arrow.png" alt="" class="arrow1 arrow"></span>
+      <span><img src="images/arrow.png" alt="" class="arrow2 arrow"></span>
 				<h2 class="text-center">How It Works</h2>
-				<img src="http://placehold.it/1200x200" class="img-responsive mh-a">
+				<div class="row">
+          <div class=" text-center col-xs-4 col-sm-4 col-md-4 col-lg-4">
+            <div class="how-it-works-inner">
+            <img src="images/how-to-step-1.png" alt="" class="mh-a how-to-icon">
+            <h3>Create a Request</h3>
+            <p>Tell us what you need hand crafted and how much you’re budgeting to pay for it,</p>
+            </div>
+          </div>
+          <div class=" text-center col-xs-4 col-sm-4 col-md-4 col-lg-4">
+            <div class="how-it-works-inner">
+            <img src="images/how-to-step-2.png" alt="" class="mh-a how-to-icon">
+            <h3>Connect With a Maker</h3>
+            <p>Receive propsals for your project from a curated group of makers and pick your favorite.</p>
+          </div>
+          </div>
+          <div class=" text-center col-xs-4 col-sm-4 col-md-4 col-lg-4">
+            <div class="how-it-works-inner">
+            <img src="images/how-to-step-3.png" alt="" class="mh-a how-to-icon">
+            <h3>Get your Goods</h3>
+            <p>The maker completes the project and delivers it by your due date.</p>
+          </div>
+          </div>
+        </div>
 		</div>
 	</section>
 
-	<section id="testimonial">
+	<section id="recent-projects">
 			<div class="container">
-				<div class="row">
-					<div class="col-lg-12">
-						<h3>Recent Completed Projects</h3>
+				<div class="row">	
+					<div class="col-lg-12 text-center">
+						<h2 class="">Recently Completed Projects</h2>
+            <p>We hand pick our makers to ensure that you have the best people working on your wedding. See some of the crafts our makers have prepared: </p>
 					</div>
 					<div class="col-md-4">
 						<img src="http://placehold.it/400x400" class="img-responsive mh-a">
