Expanded open-projects and made links work for screencast in other pages.

--- a/maker_project_detail.html
+++ b/maker_project_detail.html
@@ -53,7 +53,7 @@
            <div class="media-body align-m">
              <p><span class="font-t-u font-w-2 small">Category</span>: Favors <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">No. of Items</span>: 40 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Due By</span>: 4/16/2016 </p>
              <p><span class="font-t-u font-w-2 small">Description</span>: I would like small mason jars with lavender scented bath salts inside and a purple ribbon tied around it.</p>
-             <p><span class="font-t-u font-w-2 small">Instructions</span>: <a href="/https://www.pinterest.com/pin/482659285042667294/">https://www.pinterest.com/pin/482659285042667294/</a></p>
+             <p><span class="font-t-u font-w-2 small">Instructions</span>: <a href="https://www.pinterest.com/pin/225743000043742044/">https://www.pinterest.com/pin/225743000043742044/</a></p>
            </div>
        </div>
    </div>
