--- a/open-projects.html
+++ b/open-projects.html
@@ -44,8 +44,7 @@
 
   <!-- Start content here -->
     <div class="container">
-          <h1 class="page-title">Open Projects</h1>
-          <p>Tagline</p>
+          <h1 class="page-title">Projects Open for Bidding</h1>
     </div>
     <section class="main">
       <div class="container">
@@ -64,14 +63,14 @@
               <option>Favors</option>
               <option>Custom requests</option>
 
-            </select> 
+            </select>
           </div>
           <div class="form-group">
             <label for="exampleInputEmail2" class="form__label">Sort by:</label>
             <select class="form-control" id="exampleInputName2">
               <option>New</option>
               <option>Budget</option>
-            </select> 
+            </select>
           </div>
         </form>
         </div>
@@ -86,14 +85,14 @@
         <div class="panel-group" id="accordion">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h4 class="panel-title">   
+            <h4 class="panel-title">
                <div class="media">
                   <div class="media-left">
                       <img src="http://placehold.it/75x75" class="">
                   </div>
                   <div class="media-body align-m">
-                     <a class="accordion-toggle small" data-toggle="collapse" href="#collapseOne"><h4 class="media-heading font-t-u font-w-5">Wedding Invitations</h4></a>
-                    <p><span class="font-t-u font-w-2 small">Category</span>: Paper Goods <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Budget</span>: $500 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">No. of Items</span>: 100 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Due By</span>: 4/16/2016 
+                     <a href="maker_project_detail.html"><h4 class="media-heading font-t-u font-w-5">Alice's Wedding Favors</h4></a>
+                    <p><span class="font-t-u font-w-2 small">Category</span>: Favors <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">No. of Items</span>: 40 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Due By</span>: 4/16/2016
                     <p class="mt-10"><a class="accordion-toggle small" data-toggle="collapse" href="#collapseOne">More details</a></p>
                   </div>
                 </div>
@@ -101,43 +100,96 @@
           </div>
           <div id="collapseOne" class="panel-collapse collapse">
             <div class="panel-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            <p>I would like small mason jars with lavender scented bath salts inside and a purple ribbon tied around it.</p>
             </div>
+        </div>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+          <h4 class="panel-title">
+             <div class="media">
+                <div class="media-left">
+                    <img src="http://placehold.it/75x75" class="">
+                </div>
+                <div class="media-body align-m">
+                   <a href="maker_project_detail.html"><h4 class="media-heading font-t-u font-w-5">Priya's Invitations</h4></a>
+                  <p><span class="font-t-u font-w-2 small">Category</span>: Paper Goods <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Budget</span>: $200 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">No. of Items</span>: 50 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Due By</span>: 6/27/2016
+                  <p class="mt-10"><a class="accordion-toggle small" data-toggle="collapse" href="#collapseTwo">More details</a></p>
+                </div>
+              </div>
+          </h4>
+        </div>
+        <div id="collapseTwo" class="panel-collapse collapse">
+          <div class="panel-body">
+          <p>I would like small mason jars with lavender scented bath salts inside and a purple ribbon tied around it.</p>
+      </div>
+  </div>
+  <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+           <div class="media">
+              <div class="media-left">
+                  <img src="http://placehold.it/75x75" class="">
+              </div>
+              <div class="media-body align-m">
+                 <a href="maker_project_detail.html"><h4 class="media-heading font-t-u font-w-5">Tai's Wedding Favors</h4></a>
+                <p><span class="font-t-u font-w-2 small">Category</span>: Favors <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Budget</span>: $200 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">No. of Items</span>: 50 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Due By</span>: 8/1/2016
+                <p class="mt-10"><a class="accordion-toggle small" data-toggle="collapse" href="#collapseThree">More details</a></p>
+              </div>
+            </div>
+        </h4>
+      </div>
+      <div id="collapseThree" class="panel-collapse collapse">
+        <div class="panel-body">
+        <p>I would like small mason jars with lavender scented bath salts inside and a purple ribbon tied around it.</p>
+    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+         <div class="media">
+            <div class="media-left">
+                <img src="http://placehold.it/75x75" class="">
+            </div>
+            <div class="media-body align-m">
+               <a href="maker_project_detail.html"><h4 class="media-heading font-t-u font-w-5">Alan's Centerpieces</h4></a>
+              <p><span class="font-t-u font-w-2 small">Category</span>: Flowers <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">No. of Items</span>: 10 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Due By</span>: 12/1/2016
+              <p class="mt-10"><a class="accordion-toggle small" data-toggle="collapse" href="#collapseFour">More details</a></p>
+            </div>
+          </div>
+      </h4>
+    </div>
+    <div id="collapseFour" class="panel-collapse collapse">
+      <div class="panel-body">
+      <p>I would like small mason jars with lavender scented bath salts inside and a purple ribbon tied around it.</p>
+      </div>
+  </div>
+  </div>
+  <div class="panel panel-default">
+  <div class="panel-heading">
+    <h4 class="panel-title">
+       <div class="media">
+          <div class="media-left">
+              <img src="http://placehold.it/75x75" class="">
+          </div>
+          <div class="media-body align-m">
+             <a href="maker_project_detail.html"><h4 class="media-heading font-t-u font-w-5">Brooklyn's Necklaces</h4></a>
+            <p><span class="font-t-u font-w-2 small">Category</span>: Jewelry <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Budget</span>: $80 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">No. of Items</span>: 5 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Due By</span>: 5/10/2016
+            <p class="mt-10"><a class="accordion-toggle small" data-toggle="collapse" href="#collapseFive">More details</a></p>
           </div>
         </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h4 class="panel-title">
-              <a class="accordion-toggle" data-toggle="collapse" href="#collapseTwo">
-                Collapsible Group Item #2
-              </a>
-            </h4>
-          </div>
-          <div id="collapseTwo" class="panel-collapse collapse">
-            <div class="panel-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </div>
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h4 class="panel-title">
-              <a class="accordion-toggle" data-toggle="collapse" href="#collapseThree">
-                Collapsible Group Item #3
-              </a>
-            </h4>
-          </div>
-          <div id="collapseThree" class="panel-collapse collapse">
-            <div class="panel-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </div>
-          </div>
+    </h4>
+  </div>
+  <div id="collapseFive" class="panel-collapse collapse">
+    <div class="panel-body">
+    <p>I would like small mason jars with lavender scented bath salts inside and a purple ribbon tied around it.</p>
+    </div>
+</div>
+</div>
         </div>
       </div>
       </div>
     </div>
-  </div>
- 
 </section>
   <!-- End Content Here-->
 <footer id="footer">
@@ -153,7 +205,7 @@
                 </li>
                 <li><a href="https://twitter.com/shivasthana/" class="instagram" target="_blank"><i class="fa fa-instagram fa-lg"></i></a>
                 </li>
-                             
+
             </ul>
     <ul class="list-inline list-unstyled pull-right c-maroon">
       <li>FAQs</li>
