--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<div class="container text-center">
 					<h1 class="hero__logo">WEDO Logo</h1>
 					<p>Tagline</p>
-					<p><a class="btn btn-primary btn-lg class=" href="#" role="button">I'm planning a wedding</a>
+					<p><a class="btn btn-primary btn-lg class=" href="planner_form.html" role="button">I'm planning a wedding</a>
 						<a class="btn btn-primary btn-lg" href="open-projects.html" role="button">I'm feeling creative</a></p>
 		</div>
 	</div>
@@ -62,7 +62,7 @@
 
 	<section id="testimonial">
 			<div class="container">
-				<div class="row">	
+				<div class="row">
 					<div class="col-lg-12">
 						<h3>Recent Completed Projects</h3>
 					</div>
@@ -82,7 +82,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12">
-						
+
 					</div>
 				</div>
 			</div>
@@ -101,7 +101,7 @@
                 </li>
                 <li><a href="https://twitter.com/shivasthana/" class="instagram" target="_blank"><i class="fa fa-instagram fa-lg"></i></a>
                 </li>
-                             
+
             </ul>
     <ul class="list-inline list-unstyled pull-right c-maroon">
     	<li>FAQs</li>
