--- a/planner_form.html
+++ b/planner_form.html
@@ -26,7 +26,7 @@
     </div>
 </section>
 <body id="planner_form">
-<form class="form-horizontal" role="form">
+<form class="form-horizontal" role="form" method="post" action="planner_summary.html">
     <div class="form-group">
         <label class="control-label col-sm-4" for="category">Category</label>
         <div class="col-sm-4">
