--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ for their big day.</h3>
 		<div class="container">
       <span><img src="images/arrow.png" alt="" class="arrow1 arrow"></span>
       <span><img src="images/arrow.png" alt="" class="arrow2 arrow"></span>
-				<h2 class="text-center">How It Works</h2>
+				<h2 class="text-center mb-30">How It Works</h2>
 				<div class="row">
           <div class=" text-center col-xs-4 col-sm-4 col-md-4 col-lg-4">
             <div class="how-it-works-inner">
@@ -90,17 +90,10 @@ for their big day.</h3>
 				<div class="row">	
 					<div class="col-lg-12 text-center">
 						<h2 class="">Recently Completed Projects</h2>
-            <p>We hand pick our makers to ensure that you have the best people working on your wedding. See some of the crafts our makers have prepared: </p>
+            <p>We hand pick our makers to ensure that you have the best people working on your wedding. <br>See some of the projects our makers have completed. </p>
+            <span class=""><img src="images/recent-projects.png" alt="" class="mh-a recent-projects-img"></span>
 					</div>
-					<div class="col-md-4">
-						<img src="http://placehold.it/400x400" class="img-responsive mh-a">
-					</div>
-					<div class="col-md-4">
-						<img src="http://placehold.it/400x400" class="img-responsive mh-a">
-					</div>
-					<div class="col-md-4">
-						<img src="http://placehold.it/400x400" class="img-responsive mh-a">
-					</div>
+				
 					</div>
 				</div>
 		</section>
