Added styling for header

--- a/maker_project_detail.html
+++ b/maker_project_detail.html
@@ -22,7 +22,8 @@
 </head>
 
 <body id="planner_project_detail">
-<nav class="navbar">
+<div class="flower-background">
+    <nav class="navbar">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -34,12 +35,14 @@
           <a class="navbar-brand" href="#"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
+          <a class="navbar-brand" href="index.html"><img src="images/logo-sm.png" alt="" class="header__logo"></a>
           <ul class="list-unstyled list-inline pull-right">
-          	<li>Profile</li>
+            <li><h6>Profile</h6></li>
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
+  </div>
 
 <section id="project">
     <div class="container">
