--- a/open-projects.html
+++ b/open-projects.html
@@ -22,7 +22,8 @@
 </head>
 <body id="home">
 
-<nav class="navbar">
+  <div class="flower-background">
+    <nav class="navbar">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -31,16 +32,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html"><img src="images/logo-sm.png" alt="" class="header__logo"></a>
+          <a class="navbar-brand" href="#"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
+          <a class="navbar-brand" href="index.html"><img src="images/logo-sm.png" alt="" class="header__logo"></a>
           <ul class="list-unstyled list-inline pull-right">
-            <li>Sign In</li>
-            <li>Register</li>
+            <li><h6>Sign In</h6></li>
+            <li><h6>Register</h6></li>
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
+  </div>
 
   <!-- Start content here -->
     <div class="container">
