--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 					<h1 class="hero__logo"><img src="images/logo.png" alt=""></h1>
 					<h3 class="c-white mb-30">Helping people find the right makers at the right price 
 for their big day.</h3>
-					<p><a class="btn btn-hero btn-lg class=" href="#" role="button">I'm planning a wedding</a>
-						<a class="btn btn-hero btn-lg" href="planner_form.html" role="button">I'm feeling creative</a></p>
+					<p><a class="btn btn-hero btn-lg class=" href="planner_form.html" role="button">I'm planning a wedding</a>
+						<a class="btn btn-hero btn-lg" href="open-projects.html" role="button">I'm feeling creative</a></p>
 		</div>
 	</div>
 </div>
