Added styling to maker project detail page

--- a/maker_project_detail.html
+++ b/maker_project_detail.html
@@ -48,26 +48,86 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <h1 class="page-title"><a href="/https://www.pinterest.com/">Alice</a>'s Wedding Favors</h1>
-        <div class="media">
-           <div class="media-left">
-               <img src="http://placehold.it/75x75" class="">
-           </div>
-           <div class="media-body align-m">
-             <p><span class="font-t-u font-w-2 small">Category</span>: Favors <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">No. of Items</span>: 40 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small">Due By</span>: 4/16/2016 </p>
-             <p><span class="font-t-u font-w-2 small">Description</span>: I would like small mason jars with lavender scented bath salts inside and a purple ribbon tied around it.</p>
-             <p><span class="font-t-u font-w-2 small">Instructions</span>: <a href="https://www.pinterest.com/pin/225743000043742044/">https://www.pinterest.com/pin/225743000043742044/</a></p>
-           </div>
-       </div>
-   </div>
-   </div>
-  </div>
+          <h5 class="page-title pull-left">Available projects:</h5>
+          <h5 class="page-title pull-right"><i class="fa fa-angle-left c-pink-lt"></i>&#09;10 of 300&#09;<i class="fa fa-angle-right c-pink-lt"></i></h5>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <h1 class="page-title pull-left">Alice's Wedding Favors</h1>
+          </div>
+        </div>
+
+        <div class="row">
+          <img src="assets/maker-project-detail/lavender-salts.png" class="col-sm-3">
+          <div class="col-sm-9">
+            <p><span class="font-t-u font-w-2 small"><i class="fa fa-archive"></i> Category</span>: Favors <span class="v-divider">|</span> <span class="font-t-u font-w-2 small"><i class="fa fa-usd"></i> Budget</span>: $100 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small"><i class="fa fa-gift"></i> No. of Items</span>: 40 <span class="v-divider">|</span> <span class="font-t-u font-w-2 small"><i class="fa fa-calendar"></i> Due By</span>: 4/16/2016 </p>
+            <p><span class="font-t-u font-w-2 small">Description</span>: I would like small mason jars with lavender scented bath salts inside and a purple ribbon tied around it.</p>
+            <p><span class="font-t-u font-w-2 small">Instructions</span>: <a href="https://www.pinterest.com/pin/225743000043742044/">https://www.pinterest.com/pin/225743000043742044/</a></p>
+          </div>
+        </div>
+    </div>
 </section>
+<br>
 <section id="bid" class="text-left">
     <div class="container">
-         <p><span><button type="submit" class="btn btn-primary">Bid on this project</button></span><span><a href="/https://www.pinterest.com/">Ask a question</a></span></p>
+      <div class="row">
+        <div class="col-sm-12">
+          <a href="/https://www.pinterest.com/">Ask a question</a>&nbsp;
+          <button type="submit" class="btn btn-primary">Bid on this project</button>
+        </div>
       </div>
+    </div>
 </div>
 </section>
+
+<br><br>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <h5 class="page-title pull-left">Other projects:</h5>
+    </div>
+  </div>
+  <div class="row">
+    <img src="assets/maker-project-detail/wedding-favor-1.png" class="col-sm-2 horizontal-image-gallery">
+    <img src="assets/maker-project-detail/wedding-favor-2.png" class="col-sm-2 horizontal-image-gallery">
+    <img src="assets/maker-project-detail/wedding-favor-3.png" class="col-sm-2 horizontal-image-gallery">
+    <img src="assets/maker-project-detail/wedding-favor-4.png" class="col-sm-2 horizontal-image-gallery">
+    <img src="assets/maker-project-detail/wedding-favor-5.png" class="col-sm-2 horizontal-image-gallery">
+    <img src="assets/maker-project-detail/wedding-favor-6.png" class="col-sm-2 horizontal-image-gallery">
+  </div>
+</div>
+
+<br><br>
+
+<footer id="footer" class="cream-bg">
+  <div class="container">
+    <ul class="list-inline social pull-left">
+                <li>
+                    <a href="http://pinterest.com/shivika/" class="pinterest" target="_blank"><i class="fa fa-pinterest fa-lg"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/shivika.asthana" class="facebook" target="_blank"><i class="fa fa-facebook fa-lg"></i></a>
+                </li>
+                <li><a href="https://twitter.com/shivasthana/" class="twitter" target="_blank"><i class="fa fa-twitter fa-lg"></i></a>
+                </li>
+                <li><a href="https://twitter.com/shivasthana/" class="instagram" target="_blank"><i class="fa fa-instagram fa-lg"></i></a>
+                </li>
+
+            </ul>
+    <ul class="list-inline list-unstyled pull-right c-maroon">
+      <li>FAQs</li>
+      <li>Contact</li>
+      <li>Locations</li>
+      <li>About Us</li>
+    </ul>
+  </div>
+</footer><!-- footer -->
+
+
 </body>
 </html>
